--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,7 @@
     "fuzzysearch": "^1.0.3",
     "jquery": "^3.2.1",
     "millify": "^2.0.1",
-    "next": "^4.1.4",
+    "next": "next",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -26,6 +26,7 @@
     "react-redux": "^5.0.6",
     "react-stockcharts": "next",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uglifyjs-webpack-plugin": "1.0.0-beta.1"
   }
 }
