mods for tower research

--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,6 @@
       "es2015"
     ]
   },
-  "author": "Binayak<ghoshbinayak@gmail.com> and Kumar<kumargauravgupta3@gmail.com>",
+  "author": "Binayak<ghoshbinayak@gmail.com>",
   "license": "MIT"
 }
