--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,7 @@
     "fuzzysearch": "^1.0.3",
     "jquery": "^3.2.1",
     "millify": "^2.0.1",
-    "next": "next",
+    "next": "^4.2.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
